# codeowners-validator-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: BENCHMARKS.md
benches/cli/: benchmark_cli.sh
crates/codeowners-cli/: Cargo.toml
crates/codeowners-cli/src/: main.rs
crates/codeowners-cli/src/cli/: config.rs  github.rs  mod.rs  output.rs
crates/codeowners-python-bindings/: Cargo.toml  README.md  pyproject.toml
crates/codeowners-python-bindings/python/codeowners_validator/: __init__.py  _codeowners_validator.pyi  _types.py
crates/codeowners-python-bindings/src/: github_client.rs  lib.rs  types.rs
crates/codeowners-python-bindings/tests/: __init__.py  conftest.py  test_benchmarks.py  test_validator.py
crates/codeowners-validator-core/: Cargo.toml
crates/codeowners-validator-core/benches/: benchmarks.rs  fixtures.rs
crates/codeowners-validator-core/src/: generate.rs  lib.rs
crates/codeowners-validator-core/src/matching/: mod.rs
crates/codeowners-validator-core/src/parse/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  span.rs
crates/codeowners-validator-core/src/validate/: error.rs  file_walker.rs  github_client.rs  mod.rs  syntax.rs
crates/codeowners-validator-core/src/validate/checks/: duppatterns.rs  files.rs  mod.rs  notowned.rs  owners.rs  shadowing.rs  syntax.rs
src/: lib.rs  main.rs
src/cli/: config.rs  mod.rs  output.rs
src/matching/: mod.rs
src/parse/: error.rs  lexer.rs  mod.rs  parser.rs  span.rs
src/pattern/: mod.rs
src/validate/: error.rs  mod.rs  syntax.rs
src/validate/checks/: duppatterns.rs  mod.rs  notowned.rs  owners.rs  shadowing.rs  syntax.rs
