[package]
name = "codeowners-validator"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8.0"
thiserror = "2.0"
octocrab = "0.49"
walkdir = "2"
globset = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
http = "1.0"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
serde_json = "1.0"