[package]
name = "codeowners-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for validating GitHub CODEOWNERS files"
readme = "../../README.md"

[[bin]]
name = "codeowners-validator"
path = "src/main.rs"

[dependencies]
codeowners-validator-core.workspace = true

# CLI dependencies
clap.workspace = true
colored.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# GitHub API
octocrab.workspace = true
http.workspace = true
secrecy.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
tempfile.workspace = true
