[package]
name = "codeowners-validator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A library for parsing and validating GitHub CODEOWNERS files"
readme = "../../README.md"

[features]
default = []
generate = ["rand"]  # Enable CODEOWNERS file generation for benchmarking

[dependencies]
nom.workspace = true
thiserror.workspace = true
ignore.workspace = true
globset.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
tokio-test.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
required-features = ["generate"]
